--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "screeps-typescript-starter",
-  "version": "3.0.0",
+  "name": "screeps-world-code",
+  "version": "0.0.1",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "//": "If you add or change the names of destinations in screeps.json, make sure you update these scripts to reflect the changes",
   "scripts": {
@@ -14,7 +15,7 @@
     "push-local": "rollup -c --environment DEST:local",
     "test": "npm run test-unit",
     "test-unit": "mocha test/unit/**/*.ts",
-    "test-integration": "echo 'See docs/in-depth/testing.md for instructions on enabling integration tests'",
+    "test-integration": "mocha test/integration/**/*.ts",
     "watch-main": "rollup -cw --environment DEST:main",
     "watch-pserver": "rollup -cw --environment DEST:pserver",
     "watch-season": "rollup -cw --environment DEST:season",
@@ -30,42 +31,43 @@
   "bugs": {
     "url": "https://github.com/screepers/screeps-typescript-starter/issues"
   },
-  "homepage": "https://github.com/screepers/screeps-typescript-starter#readme",
   "engines": {
-    "node": "10.x || 12.x"
+    "node": "16.x"
   },
+  "homepage": "https://github.com/screepers/screeps-typescript-starter#readme",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
-    "@types/chai": "^4.1.6",
+    "@types/chai": "^5.0.1",
     "@types/lodash": "3.10.2",
-    "@types/mocha": "^5.2.5",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^13.13.1",
     "@types/screeps": "^3.2.3",
-    "@types/sinon": "^5.0.5",
-    "@types/sinon-chai": "^3.2.0",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "@typescript-eslint/typescript-estree": "^4.29.1",
-    "chai": "^4.2.0",
+    "chai": "^5.1.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "lodash": "^3.10.1",
-    "mocha": "^5.2.0",
+    "screeps-server-mockup": "git+https://github.com/sunjiang0018/screeps-server-mockup.git",
+    "lodash": "4.17.21",
+    "mocha": "^11.1.0",
     "prettier": "^2.3.2",
-    "rollup": "^2.56.2",
+    "rollup": "^4.32.0",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-screeps": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.31.0",
-    "sinon": "^6.3.5",
-    "sinon-chai": "^3.2.0",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "sinon": "^19.0.2",
+    "sinon-chai": "^4.0.0",
     "ts-node": "^10.2.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "source-map": "~0.6.1"
