--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "ts-node": { "esm": true },
+  "exclude": ["node_modules"]
 }
