migrate to jest test

--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "scripts": {
     "lint": "eslint \"src/**/*.ts\"",
     "build": "rollup -c",
-    "push-main": "rollup -c --environment DEST:main",
-    "push-pserver": "rollup -c --environment DEST:pserver",
-    "push-season": "rollup -c --environment DEST:season",
-    "push-sim": "rollup -c --environment DEST:sim",
-    "push-local": "rollup -c --environment DEST:local",
-    "test": "npm run test-unit",
-    "test-unit": "mocha test/unit/**/*.ts",
-    "test-integration": "mocha test/integration/**/*.ts",
-    "watch-main": "rollup -cw --environment DEST:main",
-    "watch-pserver": "rollup -cw --environment DEST:pserver",
-    "watch-season": "rollup -cw --environment DEST:season",
-    "watch-sim": "rollup -cw --environment DEST:sim",
-    "watch-local": "rollup -cw --environment DEST:local"
+    "push:main": "rollup -c --environment DEST:main",
+    "push:pserver": "rollup -c --environment DEST:pserver",
+    "push:season": "rollup -c --environment DEST:season",
+    "push:sim": "rollup -c --environment DEST:sim",
+    "push:local": "rollup -c --environment DEST:local",
+    "test": "jest",
+    "test:unit": "jest test/unit",
+    "test:integration": "jest --forceExit test/integration",
+    "watch:main": "rollup -cw --environment DEST:main",
+    "watch:pserver": "rollup -cw --environment DEST:pserver",
+    "watch:season": "rollup -cw --environment DEST:season",
+    "watch:sim": "rollup -cw --environment DEST:sim",
+    "watch:·local": "rollup -cw --environment DEST:local"
   },
   "repository": {
     "type": "git",
@@ -36,11 +36,12 @@
   },
   "homepage": "https://github.com/screepers/screeps-typescript-starter#readme",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
-    "@types/chai": "^5.0.1",
+    "@screeps/common": "^2.15.5",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "3.10.2",
-    "@types/mocha": "^10.0.10",
     "@types/node": "^13.13.1",
     "@types/screeps": "^3.2.3",
     "@types/sinon": "^17.0.3",
@@ -48,23 +49,21 @@
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "@typescript-eslint/typescript-estree": "^4.29.1",
-    "chai": "^5.1.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "screeps-server-mockup": "git+https://github.com/sunjiang0018/screeps-server-mockup.git",
+    "jest": "^29.7.0",
     "lodash": "4.17.21",
-    "mocha": "^11.1.0",
     "prettier": "^2.3.2",
-    "rollup": "^4.32.0",
+    "rollup": "^3.29.5",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-screeps": "^1.0.1",
     "rollup-plugin-typescript2": "^0.36.0",
-    "sinon": "^19.0.2",
-    "sinon-chai": "^4.0.0",
+    "screeps-server-mockup": "git+https://github.com/sunjiang0018/screeps-server-mockup.git",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.2.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3"
