--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "experimentalDecorators": true,
     "noImplicitReturns": true,
     "allowSyntheticDefaultImports": true,
-    "allowUnreachableCode": false
+    "allowUnreachableCode": false,
+    "types": ["node", "lodash", "jest", "screeps"]
   },
   "ts-node": { "esm": true },
   "exclude": ["node_modules"]
